--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ picture: /assets/images/surf_sandia.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
-resume-external: true
-resume-url: https://google.com/?q=my+resume
+#resume: true
+# resume-external: true
+# resume-url: https://google.com/?q=my+resume
 
 #url: https://koppl.in/indigo
 # your url: http://USERNAME.github.io
