--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ picture: /assets/images/surf_sandia.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-#resume: true
-# resume-external: true
-# resume-url: https://google.com/?q=my+resume
+resume: true
+resume-external: local
+resume-url: /assets/Lengyel_CV.pdf
 
 #url: https://koppl.in/indigo
 # your url: http://USERNAME.github.io
@@ -33,7 +33,7 @@ analytics-google: 'UA-135031853-1'
 # if you don't want comments in your posts, leave categories empty
 disqus:
   shortname: mydisqus # enter this from your disqus account
-  categories: [blog, project] # only show disqus for posts that have these categories
+  categories: [blog, project, stuff] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
 #facebook: myfacebook
@@ -78,11 +78,12 @@ width: normal
 # paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
-projects: true
+# projects: true
 
 # if you don't need "about" or "blog", comment them out below
 about: true
 blog: true
+#stuff: true
 
 # do you want to show the "read time" of the posts?
 read-time: true
