--- a/_config.yml
+++ b/_config.yml
@@ -109,6 +109,7 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-admin
+  - jekyll-sitemap
 
 jekyll-mentions:
     base_url: https://github.com
