--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ analytics-google: 'UA-135031853-1'
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
-  shortname: mydisqus # enter this from your disqus account
-  categories: [blog, project, stuff] # only show disqus for posts that have these categories
+  shortname: ivanlen-github-io # enter this from your disqus account
+  categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
 #facebook: myfacebook
